--- a/packages/autorest.gotest/package.json
+++ b/packages/autorest.gotest/package.json
@@ -11,7 +11,7 @@
     "build": "tsc -p . && cpy template ../../dist/src --cwd=src/ --parents",
     "watch": "tsc -p . --watch",
     "prepare": "npm run build",
-    "test": "npm run build && cross-env NODE_ENV=test jest --ci --reporters=default --reporters=jest-junit",
+    "test": "npm run build",
     "unittest": "npm run build && cross-env NODE_ENV=test jest --ci --reporters=default --reporters=jest-junit --config ./jest.unittest.config.js",
     "unittest-update": "npm run build && cross-env NODE_ENV=test jest --ci --reporters=default --reporters=jest-junit --updateSnapshot --config ./jest.unittest.config.js",
     "clean": "ver > nul 2>&1 nul && npm run --silent clean-cmd || npm run --silent clean-bash",
@@ -48,8 +48,8 @@
   },
   "dependencies": {
     "@autorest/codemodel": "catalog:",
-    "@autorest/extension-base": "~3.6.0",
-    "@autorest/testmodeler": "~2.4.0",
+    "@autorest/extension-base": "~3.5.2",
+    "@autorest/testmodeler": "2.6.4-ci.e5cceacc3.0",
     "@azure-tools/codegen": "catalog:",
     "@azure-tools/linq": "catalog:",
     "@types/nunjucks": "^3.2.6",
@@ -61,7 +61,6 @@
     "lodash": "^4.17.21",
     "node-yaml": "^4.0.1",
     "nunjucks": "^3.2.3",
-    "oav": "3.0.3",
     "reflect-metadata": "~0.2.2"
   },
   "files": [
